package com.example.mynotecompose.feature_note.presentation

import androidx.compose.animation.ExperimentalAnimationApi
import androidx.compose.ui.graphics.toArgb
import androidx.compose.ui.test.*
import androidx.compose.ui.test.junit4.createAndroidComposeRule
import androidx.navigation.NavType
import androidx.navigation.compose.NavHost
import androidx.navigation.compose.composable
import androidx.navigation.compose.rememberNavController
import androidx.navigation.navArgument
import com.example.mynotecompose.core.util.TestTags
import com.example.mynotecompose.di.AppModule
import com.example.mynotecompose.feature_note.domain.util.Screen
import com.example.mynotecompose.feature_note.presentation.add_edit_note.AddEditNoteScreen
import com.example.mynotecompose.feature_note.presentation.notes.NotesScreen
import com.example.mynotecompose.feature_note.presentation.ui.theme.*
import dagger.hilt.android.testing.HiltAndroidRule
import dagger.hilt.android.testing.HiltAndroidTest
import dagger.hilt.android.testing.UninstallModules
import org.junit.Before
import org.junit.Rule
import org.junit.Test


@HiltAndroidTest
@UninstallModules(AppModule::class)
class NotesEndToEndTest {

    @get:Rule(order = 0)
    val hiltRule = HiltAndroidRule(this)

    @get:Rule(order = 1)
    val composeRule = createAndroidComposeRule<MainActivity>()

    @ExperimentalAnimationApi
    @Before
    fun setUp(){
        hiltRule.inject()
        composeRule.setContent {
            val navController = rememberNavController()
            NavHost(
                navController = navController,
                startDestination = Screen.NotesScreen.route
            ) {
                composable(
                    Screen.NotesScreen.route
                ) {
                    NotesScreen(
                        navController = navController
                    )
                }
                composable(
                    Screen.AddEditNoteScreen.route +
                            "?noteId={noteId}&noteColor={noteColor}",
                    arguments = listOf(
                        navArgument(
                            name = "noteId"
                        ) {
                            type = NavType.IntType
                            defaultValue = -1
                        },
                        navArgument(
                            name = "noteColor"
                        ) {
                            type = NavType.IntType
                            defaultValue = -1
                        }
                    )
                ) {
                    val color = it.arguments?.getInt("noteColor") ?: -1
                    AddEditNoteScreen(
                        navController = navController,
                        noteColor = color
                    )
                }
            }
        }
    }

    @Test
    fun saveNewNote_editAfterwards(){
        //Click on FAB to get to add note screen
        composeRule.onNodeWithContentDescription("Add").performClick()

        //Enter texts in title and content text field
        composeRule
            .onNodeWithTag(TestTags.TITLE_TEXT_FIELD)
            .performTextInput("test_title")
        composeRule
            .onNodeWithTag(TestTags.CONTENT_TEXT_FIELD)
            .performTextInput("test_content")
        //Save the new note
        composeRule.onNodeWithContentDescription("Save").performClick()

        //Make sure there is a note in the list with our title and content
        composeRule.onNodeWithText("test_title").assertIsDisplayed()
        composeRule.onNodeWithText("test_content").assertIsDisplayed()
        //Click on note to edit it
        composeRule.onNodeWithText("test_title").performClick()

        //Make sure title and content text fields contain note title and content
        composeRule
            .onNodeWithTag(TestTags.TITLE_TEXT_FIELD)
            .assertTextEquals("test_title")
        composeRule
            .onNodeWithTag(TestTags.CONTENT_TEXT_FIELD)
            .assertTextEquals("test_content")
        //Add the text "2" to the title text field
        composeRule
            .onNodeWithTag(TestTags.TITLE_TEXT_FIELD)
            .performTextInput("2")
        //Update the note
        composeRule.onNodeWithContentDescription("Save").performClick()

        //Make sure the update was applied to the list
        composeRule.onNodeWithText("test_title2").assertIsDisplayed()
        composeRule.onNodeWithText("test_content").assertIsDisplayed()
    }

    @Test
    fun saveNewNotes_orderByTitleDescending(){
        for(i in 1..3) {
            // Click on FAB to get to add note screen
            composeRule.onNodeWithContentDescription("Add").performClick()

            // Enter texts in title and content text fields
            composeRule
                .onNodeWithTag(TestTags.TITLE_TEXT_FIELD)
                .performTextInput(i.toString())
            composeRule
                .onNodeWithTag(TestTags.CONTENT_TEXT_FIELD)
                .performTextInput(i.toString())
            // Save the new
            composeRule.onNodeWithContentDescription("Save").performClick()
        }

        //Make sure the notes was applied to the list
        composeRule.onNodeWithText("1").assertIsDisplayed()
        composeRule.onNodeWithText("2").assertIsDisplayed()
        composeRule.onNodeWithText("3").assertIsDisplayed()

        //Click to Order Selection
        composeRule.onNodeWithContentDescription("Sort").performClick()
        //Choice to title
        composeRule.onNodeWithContentDescription("Title").performClick()
        //Choice to descending
        composeRule.onNodeWithContentDescription("Descending").performClick()

        //Make sure the notes sorted right
        composeRule.onAllNodesWithTag(TestTags.NOTE_ITEM)[0].assertTextContains("3")
        composeRule.onAllNodesWithTag(TestTags.NOTE_ITEM)[1].assertTextContains("2")
        composeRule.onAllNodesWithTag(TestTags.NOTE_ITEM)[2].assertTextContains("1")
    }

    @Test
    fun saveNewNotes_orderByTitleAscending(){
        for(i in 1..3) {
            // Click on FAB to get to add note screen
            composeRule.onNodeWithContentDescription("Add").performClick()

            // Enter texts in title and content text fields
            composeRule
                .onNodeWithTag(TestTags.TITLE_TEXT_FIELD)
                .performTextInput(i.toString())
            composeRule
                .onNodeWithTag(TestTags.CONTENT_TEXT_FIELD)
                .performTextInput(i.toString())
            // Save the new
            composeRule.onNodeWithContentDescription("Save").performClick()
        }

        //Make sure the notes was applied to the list
        composeRule.onNodeWithText("1").assertIsDisplayed()
        composeRule.onNodeWithText("2").assertIsDisplayed()
        composeRule.onNodeWithText("3").assertIsDisplayed()
        //Click to Order Selection
        composeRule.onNodeWithContentDescription("Sort").performClick()
        //Choice to title
        composeRule.onNodeWithContentDescription("Title").performClick()
        //Choice to ascending
        composeRule.onNodeWithContentDescription("Ascending").performClick()

        //Make sure the notes sorted right
        composeRule.onAllNodesWithTag(TestTags.NOTE_ITEM)[0].assertTextContains("1")
        composeRule.onAllNodesWithTag(TestTags.NOTE_ITEM)[1].assertTextContains("2")
        composeRule.onAllNodesWithTag(TestTags.NOTE_ITEM)[2].assertTextContains("3")
    }

    @Test
    fun saveNewNotes_orderByDateDescending(){
        for(i in 1..3) {
            // Click on FAB to get to add note screen
            composeRule.onNodeWithContentDescription("Add").performClick()

            // Enter texts in title and content text fields
            composeRule
                .onNodeWithTag(TestTags.TITLE_TEXT_FIELD)
                .performTextInput(i.toString())
            composeRule
                .onNodeWithTag(TestTags.CONTENT_TEXT_FIELD)
                .performTextInput(i.toString())
            // Save the new
            composeRule.onNodeWithContentDescription("Save").performClick()
        }

        //Make sure the notes was applied to the list
        composeRule.onNodeWithText("1").assertIsDisplayed()
        composeRule.onNodeWithText("2").assertIsDisplayed()
        composeRule.onNodeWithText("3").assertIsDisplayed()
        //Click to Order Selection
        composeRule.onNodeWithContentDescription("Sort").performClick()
        //Choice to date
        composeRule.onNodeWithContentDescription("Date").performClick()
        //Choice to descending
        composeRule.onNodeWithContentDescription("Descending").performClick()

        //Make sure the notes sorted right
        composeRule.onAllNodesWithTag(TestTags.NOTE_ITEM)[0].assertTextContains("3")
        composeRule.onAllNodesWithTag(TestTags.NOTE_ITEM)[1].assertTextContains("2")
        composeRule.onAllNodesWithTag(TestTags.NOTE_ITEM)[2].assertTextContains("1")
    }

    @Test
    fun saveNewNotes_orderByDateAscending(){
        for(i in 1..3) {
            // Click on FAB to get to add note screen
            composeRule.onNodeWithContentDescription("Add").performClick()

            // Enter texts in title and content text fields
            composeRule
                .onNodeWithTag(TestTags.TITLE_TEXT_FIELD)
                .performTextInput(i.toString())
            composeRule
                .onNodeWithTag(TestTags.CONTENT_TEXT_FIELD)
                .performTextInput(i.toString())
            // Save the new
            composeRule.onNodeWithContentDescription("Save").performClick()
        }

        //Make sure the notes was applied to the list
        composeRule.onNodeWithText("1").assertIsDisplayed()
        composeRule.onNodeWithText("2").assertIsDisplayed()
        composeRule.onNodeWithText("3").assertIsDisplayed()
        //Click to Order Selection
        composeRule.onNodeWithContentDescription("Sort").performClick()
        //Choice to date
        composeRule.onNodeWithContentDescription("Date").performClick()
        //Choice to ascending
        composeRule.onNodeWithContentDescription("Ascending").performClick()

        //Make sure the notes sorted right
        composeRule.onAllNodesWithTag(TestTags.NOTE_ITEM)[0].assertTextContains("1")
        composeRule.onAllNodesWithTag(TestTags.NOTE_ITEM)[1].assertTextContains("2")
        composeRule.onAllNodesWithTag(TestTags.NOTE_ITEM)[2].assertTextContains("3")
    }

    @Test
    fun saveNewNotes_orderByColorAscending(){
        val noteColors = listOf(
            RedOrange,
            LightGreen,
            Violet,
            BabyBlue,
            RedPink
        )
        for(i in noteColors) {
            // Click on FAB to get to add note screen
            composeRule.onNodeWithContentDescription("Add").performClick()

            //
            composeRule.onNodeWithTag(i.toString()).performClick()
            // Enter texts in title and content text fields
            composeRule
                .onNodeWithTag(TestTags.TITLE_TEXT_FIELD)
                .performTextInput(i.toArgb().toString())
            composeRule
                .onNodeWithTag(TestTags.CONTENT_TEXT_FIELD)
                .performTextInput(i.toArgb().toString())
            // Save the new
            composeRule.onNodeWithContentDescription("Save").performClick()
        }

        //Make sure the notes was applied to the list
        composeRule.onNodeWithText("-21615").assertIsDisplayed()
        composeRule.onNodeWithText("-1577573").assertIsDisplayed()
        composeRule.onNodeWithText("-3173158").assertIsDisplayed()
        composeRule.onNodeWithText("-8266006").assertIsDisplayed()
        composeRule.onNodeWithText("-749647").assertIsDisplayed()
        //Click to Order Selection
        composeRule.onNodeWithContentDescription("Sort").performClick()
        //Choice to color
        composeRule.onNodeWithContentDescription("Color").performClick()
        //Choice to ascending
        composeRule.onNodeWithContentDescription("Ascending").performClick()

        //Make sure the notes sorted right
        composeRule.onAllNodesWithTag(TestTags.NOTE_ITEM)[0].assertTextContains("-8266006")
        composeRule.onAllNodesWithTag(TestTags.NOTE_ITEM)[1].assertTextContains("-3173158")
        composeRule.onAllNodesWithTag(TestTags.NOTE_ITEM)[2].assertTextContains("-1577573")
        composeRule.onAllNodesWithTag(TestTags.NOTE_ITEM)[3].assertTextContains("-749647")
        composeRule.onAllNodesWithTag(TestTags.NOTE_ITEM)[4].assertTextContains("-21615")
    }

    @Test
    fun saveNewNotes_orderByColorDescending(){
        val noteColors = listOf(
            RedOrange,
            LightGreen,
            Violet,
            BabyBlue,
            RedPink
        )
        for(i in noteColors) {
            // Click on FAB to get to add note screen
            composeRule.onNodeWithContentDescription("Add").performClick()

            //
            composeRule.onNodeWithTag(i.toString()).performClick()
            // Enter texts in title and content text fields
            composeRule
                .onNodeWithTag(TestTags.TITLE_TEXT_FIELD)
                .performTextInput(i.toArgb().toString())
            composeRule
                .onNodeWithTag(TestTags.CONTENT_TEXT_FIELD)
                .performTextInput(i.toArgb().toString())
            // Save the new
            composeRule.onNodeWithContentDescription("Save").performClick()
        }

        //Make sure the notes was applied to the list
        composeRule.onNodeWithText("-21615").assertIsDisplayed()
        composeRule.onNodeWithText("-1577573").assertIsDisplayed()
        composeRule.onNodeWithText("-3173158").assertIsDisplayed()
        composeRule.onNodeWithText("-8266006").assertIsDisplayed()
        composeRule.onNodeWithText("-749647").assertIsDisplayed()
        //Click to Order Selection
        composeRule.onNodeWithContentDescription("Sort").performClick()
        //Choice to color
        composeRule.onNodeWithContentDescription("Color").performClick()
        //Choice to descending
        composeRule.onNodeWithContentDescription("Descending").performClick()

        //Make sure the notes sorted right
        composeRule.onAllNodesWithTag(TestTags.NOTE_ITEM)[0].assertTextContains("-21615")
        composeRule.onAllNodesWithTag(TestTags.NOTE_ITEM)[1].assertTextContains("-749647")
        composeRule.onAllNodesWithTag(TestTags.NOTE_ITEM)[2].assertTextContains("-1577573")
        composeRule.onAllNodesWithTag(TestTags.NOTE_ITEM)[3].assertTextContains("-3173158")
        composeRule.onAllNodesWithTag(TestTags.NOTE_ITEM)[4].assertTextContains("-8266006")
    }

    @Test
    fun saveNewNotes_deleteNotes(){
        for(i in 1..3) {
            // Click on FAB to get to add note screen
            composeRule.onNodeWithContentDescription("Add").performClick()

            // Enter texts in title and content text fields
            composeRule
                .onNodeWithTag(TestTags.TITLE_TEXT_FIELD)
                .performTextInput(i.toString())
            composeRule
                .onNodeWithTag(TestTags.CONTENT_TEXT_FIELD)
                .performTextInput(i.toString())
            // Save the new
            composeRule.onNodeWithContentDescription("Save").performClick()
        }
        //Make sure the notes was applied to the list
        composeRule.onNodeWithText("1").assertIsDisplayed()
        composeRule.onNodeWithText("2").assertIsDisplayed()
        composeRule.onNodeWithText("3").assertIsDisplayed()

        //Delete note "1"
        composeRule.onNodeWithTag("1").performClick()
        //Make sure the notes was not deleted
        composeRule.onNodeWithText("2").assertIsDisplayed()
        composeRule.onNodeWithText("3").assertIsDisplayed()
        //Delete note "2"
        composeRule.onNodeWithTag("2").performClick()
        //Make sure the note was not deleted
        composeRule.onNodeWithText("3").assertIsDisplayed()
        //Delete note "3"
        composeRule.onNodeWithTag("3").performClick()
    }

    @Test
    fun saveNewNotes_deleteNote_undoDeleteNote(){
        for(i in 1..3) {
            // Click on FAB to get to add note screen
            composeRule.onNodeWithContentDescription("Add").performClick()

            // Enter texts in title and content text fields
            composeRule
                .onNodeWithTag(TestTags.TITLE_TEXT_FIELD)
                .performTextInput(i.toString())
            composeRule
                .onNodeWithTag(TestTags.CONTENT_TEXT_FIELD)
                .performTextInput(i.toString())
            // Save the new
            composeRule.onNodeWithContentDescription("Save").performClick()
        }
        //Make sure the notes was applied to the list
        composeRule.onNodeWithText("1").assertIsDisplayed()
        composeRule.onNodeWithText("2").assertIsDisplayed()
        composeRule.onNodeWithText("3").assertIsDisplayed()

        //Delete note "1"
        composeRule.onNodeWithTag("1").performClick()
        //Undo
        composeRule.onNodeWithText("Undo").performClick()
        //Make sure the note was not deleted
        composeRule.onNodeWithText("1").assertIsDisplayed()
    }
}